--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "animejs": "^3.2.1",
     "chart.js": "^2.9.4",
     "firebase": "^8.1.1",
+    "fluent-ffmpeg": "^2.1.2",
     "node-sass": "^4.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
